# 2playerz_agent

./: .env.example  .gitignore  DEBUG_GUIDE.md  README.md  README_unified.md  api.py  api_new.py  example_usage.py  gpt_improve.py  language_detecter.py  main.py  pyproject.toml  rag_agent-9-30-25.py  rag_agent.py  rag_agent.txt  test_client.py  test_websocket.py  unified_rag_handler.py
faiss_index/: index.faiss  index.pkl
