[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.7",
    "python-dotenv>=1.1.1",
    "pymongo>=4.6.0",
    "pandas>=2.3.2",
    "sentence-transformers>=5.1.1",
    "safetensors>=0.6.2",
    "langdetect>=1.0.9",
    "googletrans>=4.0.2",
    "langchain-openai>=0.3.33",
    "langid>=1.1.6",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]
